--- a/app/src/main/res/layout/content_logged.xml
+++ b/app/src/main/res/layout/content_logged.xml
@@ -13,12 +13,13 @@
         android:id="@+id/inc_toolbar"
         layout="@layout/toolbar"/>
 
-    <FrameLayout
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/drawer_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/inc_toolbar">
-    </FrameLayout>
+        android:layout_below="@id/inc_toolbar"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    </android.support.design.widget.CoordinatorLayout>
 
     <ProgressBar
         android:id="@+id/pb_global_progress"
