--- a/app/src/main/res/layout/nav_header_logged.xml
+++ b/app/src/main/res/layout/nav_header_logged.xml
@@ -6,6 +6,12 @@
     android:background="@drawable/side_nav_bar"
     xmlns:tools="http://schemas.android.com/tools"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+    <ImageView
+        android:id="@+id/iv_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
