--- a/app/src/main/res/layout/app_bar_logged.xml
+++ b/app/src/main/res/layout/app_bar_logged.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.logged.LoggedActivity"
+    tools:context=".view.connected.LoggedActivity"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <include layout="@layout/content_logged"/>
