--- a/app/src/main/res/layout/fragment_discipline_classes.xml
+++ b/app/src/main/res/layout/fragment_discipline_classes.xml
@@ -5,11 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.forcetower.uefs.view.discipline.DisciplineClassesActivity">
-
-    <include
-        android:id="@+id/inc_toolbar"
-        layout="@layout/toolbar"/>
+    tools:context="com.forcetower.uefs.view.connected.fragments.DisciplineClassesFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
