--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -37,7 +37,7 @@
     <string name="achievement_dora_the_explorer" translatable="false">CgkIz4rBs-YKEAIQEQ</string>
     <!-- achievement Dora, a Estudiosa -->
     <string name="achievement_dora_the_studious" translatable="false">CgkIz4rBs-YKEAIQEg</string>
-    <!-- achievement Agora eu entendi, agora eu saquei! -->
+    <!-- achievement Agora eu entendi, agora eu saquei! !-->
     <string name="achievement_now_i_understand_and_get_it" translatable="false">CgkIz4rBs-YKEAIQFA</string>
     <!-- achievement Agora todas as peças se encaixaram! !-->
     <string name="achievement_now_all_pieces_come_together" translatable="false">CgkIz4rBs-YKEAIQEw</string>
