--- a/app/src/main/res/layout/fragment_the_adventure.xml
+++ b/app/src/main/res/layout/fragment_the_adventure.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorPrimary">
 
     <ScrollView
@@ -20,6 +21,18 @@
             android:layout_gravity="center"
             android:animateLayoutChanges="true">
 
+            <TextView
+                android:id="@+id/tv_location_explained"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/adventure_confirm_location"
+                android:textColor="@color/white"
+                android:fontFamily="@font/roboto_medium"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:visibility="invisible"
+                tools:visibility="visible"/>
+
             <RelativeLayout
                 android:layout_width="100dp"
                 android:layout_height="140dp"
@@ -28,6 +41,7 @@
                 <ImageView
                     android:layout_width="36dp"
                     android:layout_height="36dp"
+                    android:layout_marginBottom="-8dp"
                     app:srcCompat="@drawable/ic_crown_black_24dp"
                     android:layout_above="@id/iv_unes_confirm_location"
                     android:rotation="-30"
