--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -11,9 +11,9 @@
     <string name="achievement_clean_semester" translatable="false">CgkIz4rBs-YKEAIQBA</string>
     <!-- achievement Medíocre !-->
     <string name="achievement_mediocre" translatable="false">CgkIz4rBs-YKEAIQBQ</string>
-    <!-- achievement Semestre de 6 meses -->
+    <!-- achievement Semestre de 6 meses !-->
     <string name="achievement_6_month_semester" translatable="false">CgkIz4rBs-YKEAIQBg</string>
-    <!-- achievement Semestre da virada -->
+    <!-- achievement Semestre da virada !-->
     <string name="achievement_year_turner_semester" translatable="false">CgkIz4rBs-YKEAIQBw</string>
     <!-- achievement Sobrevivente !-->
     <string name="achievement_survivor" translatable="false">CgkIz4rBs-YKEAIQCA</string>
@@ -31,11 +31,11 @@
     <string name="achievement_i_have_never_seen" translatable="false">CgkIz4rBs-YKEAIQDg</string>
     <!-- achievement Pseudoveterano !-->
     <string name="achievement_senior_wannabe" translatable="false">CgkIz4rBs-YKEAIQDw</string>
-    <!-- achievement Dora, a Aventureira -->
+    <!-- achievement Dora, a Aventureira !-->
     <string name="achievement_dora_the_adventurer" translatable="false">CgkIz4rBs-YKEAIQEA</string>
     <!-- achievement Dora, a Exploradora !-->
     <string name="achievement_dora_the_explorer" translatable="false">CgkIz4rBs-YKEAIQEQ</string>
-    <!-- achievement Dora, a Estudiosa -->
+    <!-- achievement Dora, a Estudiosa !-->
     <string name="achievement_dora_the_studious" translatable="false">CgkIz4rBs-YKEAIQEg</string>
     <!-- achievement Agora eu entendi, agora eu saquei! !-->
     <string name="achievement_now_i_understand_and_get_it" translatable="false">CgkIz4rBs-YKEAIQFA</string>
