--- a/app/src/main/res/layout/fragment_the_adventure.xml
+++ b/app/src/main/res/layout/fragment_the_adventure.xml
@@ -30,7 +30,7 @@
                 android:fontFamily="@font/roboto_medium"
                 android:gravity="center"
                 android:textSize="12sp"
-                android:visibility="invisible"
+                android:visibility="gone"
                 tools:visibility="visible"/>
 
             <RelativeLayout
