--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.forcetower.uefs.view.about.AboutActivity">
+    tools:context="com.forcetower.uefs.view.about.AboutActivity"
+    android:background="@color/lighter_gray">
 
     <include
         android:id="@+id/inc_toolbar"
