--- a/app/src/main/res/layout/content_logged.xml
+++ b/app/src/main/res/layout/content_logged.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/inc_toolbar"
+        android:background="@color/lighter_gray"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
     </android.support.design.widget.CoordinatorLayout>
 
