--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,6 +45,7 @@
     <color name="disciplines_color">#9C27B0</color>
     <color name="calendar_color">#607D8B</color>
     <color name="enrollment_color">#FF9800</color>
+    <color name="flowchart_color">#009688</color>
     <color name="big_tray_color">#F44336</color>
 
 
