--- a/app/src/main/res/layout/fragment_master_sync_control.xml
+++ b/app/src/main/res/layout/fragment_master_sync_control.xml
@@ -1,75 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_sync_status"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/ic_sync_black_24dp"
-        android:tint="?attr/color_accent"
-        android:layout_margin="16dp"/>
-
-    <TextView
-        android:id="@+id/tv_status_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="@string/master_update_status_message"
-        android:layout_below="@id/iv_sync_status"
-        android:gravity="center"
-        android:textColor="@color/primaryText"
-        android:fontFamily="@font/roboto_medium"
-        android:textSize="16sp"/>
-
-    <TextView
-        android:id="@+id/tv_connections"
-        android:layout_below="@id/tv_status_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/master_update_connections"
-        android:gravity="center"
-        android:textColor="@color/secondaryText"
-        android:fontFamily="@font/roboto_regular"
-        android:textSize="14sp"/>
-
     <LinearLayout
-        android:layout_below="@id/tv_connections"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:padding="16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="center">
 
-        <android.support.design.widget.TextInputLayout
+        <TextView
+            android:id="@+id/tv_connections"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/et_login_password"
+            android:layout_height="wrap_content"
+            android:text="@string/master_update_connections"
+            android:gravity="center"
+            android:textColor="@color/secondaryText"
+            android:fontFamily="@font/roboto_regular"
+            android:textSize="14sp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:layout_marginTop="8dp"
+            android:orientation="vertical">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/login_password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:maxLength="30"/>
-        </android.support.design.widget.TextInputLayout>
+                android:orientation="horizontal">
 
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_enable"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:text="@string/enable"
-            style="@style/Base.Widget.AppCompat.Button.Colored"/>
+                <ImageView
+                    android:id="@+id/iv_manager_status"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    app:srcCompat="@drawable/ic_sync_black_24dp"
+                    android:tint="?attr/color_accent"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"/>
 
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_disable"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:text="@string/disable"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:text="@string/control_account_manager_sync"/>
+
+                    <android.support.v7.widget.AppCompatButton
+                        android:id="@+id/btn_toggle_manager"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:text="@string/enable"
+                        style="@style/Base.Widget.AppCompat.Button.Colored"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iv_alarm_status"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    app:srcCompat="@drawable/ic_sync_black_24dp"
+                    android:tint="?attr/color_accent"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"/>
+
+                <LinearLayout
+                    android:layout_marginTop="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:text="@string/control_alarm_sync"/>
+
+                    <android.support.v7.widget.AppCompatButton
+                        android:id="@+id/btn_toggle_alarm"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:text="@string/enable"
+                        style="@style/Base.Widget.AppCompat.Button.Colored"/>
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
