--- a/app/src/main/res/layout/fragment_big_tray.xml
+++ b/app/src/main/res/layout/fragment_big_tray.xml
@@ -95,7 +95,7 @@
                 android:text="@string/ru_owners"
                 android:gravity="center"
                 android:textColor="@color/primaryText"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/roboto_medium"
                 android:padding="8dp"/>
         </LinearLayout>
     </ScrollView>
@@ -109,63 +109,16 @@
         android:orientation="vertical"
         android:layout_alignParentBottom="true">
 
-        <LinearLayout
+        <Button
+            android:id="@+id/btn_visit_big_tray"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp"
-            android:baselineAligned="false">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".5"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/btn_contribute"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:text="@string/contribute"/>
-                <!--
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ru_contribute_desc"
-                    android:gravity="center"/>
-                    -->
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".5"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/btn_feedback"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:text="@string/feedback"/>
-                <!--
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ru_feedback_desc"
-                    android:gravity="center"/>
-                    -->
-            </LinearLayout>
-        </LinearLayout>
+            android:layout_height="48dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:text="@string/visit_official_website"/>
 
         <TextView
             android:id="@+id/tv_ru_last_update"
