--- a/app/src/main/res/menu/activity_logged_drawer.xml
+++ b/app/src/main/res/menu/activity_logged_drawer.xml
@@ -94,7 +94,7 @@
         <item
             android:id="@+id/nav_feedback"
             android:title="@string/nav_title_feedback"
-            android:checkable="false"/>
+            android:checkable="true"/>
 
         <item
             android:id="@+id/nav_about"
