--- a/app/src/main/res/layout/fragment_suggestion.xml
+++ b/app/src/main/res/layout/fragment_suggestion.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.forcetower.uefs.view.suggestion.SuggestionFragment">
+    tools:context="com.forcetower.uefs.view.connected.fragments.SuggestionFragment">
 
     <TextView
         android:id="@+id/tv_write_suggestion"
