--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,6 +48,8 @@
     <color name="flowchart_color">#009688</color>
     <color name="big_tray_color">#F44336</color>
 
+    <color name="facebook_blue">#3B5998</color>
+
 
     <color name="dis_01">#2196F3</color>
     <color name="dis_02">#4CAF50</color>
