--- a/app/src/main/res/layout/fragment_universe_login.xml
+++ b/app/src/main/res/layout/fragment_universe_login.xml
@@ -129,6 +129,30 @@
                         android:inputType="textPassword"/>
                 </android.support.design.widget.TextInputLayout>
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:textAlignment="center"
+                    android:text="@string/or"
+                    android:textColor="@color/primaryText"
+                    android:fontFamily="@font/roboto_regular"/>
+
+                <android.support.v7.widget.AppCompatButton
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:layout_marginTop="4dp"
+                    android:text="@string/universe_connect_using_facebook"
+                    android:textAllCaps="false"
+                    android:drawableStart="@drawable/ic_facebook_white_24dp"
+                    android:drawableLeft="@drawable/ic_facebook_white_24dp"
+                    app:backgroundTint="@color/facebook_blue"
+                    android:textColor="@color/white"
+                    android:paddingStart="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingRight="10dp"/>
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
