--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
         <item name="color_primary_dark">@color/colorPrimaryDark</item>
         <item name="color_primary_light">@color/colorPrimaryLight</item>
         <item name="coordinatorLayoutStyle">@style/Widget.Design.CoordinatorLayout</item>
-        <item name="android:fontFamily">@font/roboto_regular"</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
     </style>
 
     <style name="AppTheme.NavigationDrawer" parent="AppTheme" />
