--- a/app/src/main/res/layout/fragment_universe_create_account.xml
+++ b/app/src/main/res/layout/fragment_universe_create_account.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/view_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -32,6 +33,7 @@
                 android:transitionName="@string/transition_logo"/>
 
             <LinearLayout
+                android:id="@+id/ll_animations"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
