--- a/app/src/main/res/layout/fragment_universe_start_welcome.xml
+++ b/app/src/main/res/layout/fragment_universe_start_welcome.xml
@@ -15,9 +15,10 @@
         android:fontFamily="@font/roboto_medium"
         android:gravity="center"
         android:textAlignment="center"
-        android:layout_marginTop="24dp"/>
+        android:layout_marginTop="48dp"/>
 
     <ImageView
+        android:id="@+id/iv_logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerInParent="true"
@@ -26,6 +27,7 @@
 
 
     <android.support.v7.widget.AppCompatButton
+        android:id="@+id/btn_know_more"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:text="@string/uneverse_know_more"
@@ -36,6 +38,7 @@
         style="@style/Base.Widget.AppCompat.ButtonBar.AlertDialog"/>
 
     <android.support.v7.widget.AppCompatButton
+        android:id="@+id/btn_first_steps"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:text="@string/uneverse_first_steps"
