--- a/app/src/main/res/layout/fragment_discipline_classes.xml
+++ b/app/src/main/res/layout/fragment_discipline_classes.xml
@@ -7,13 +7,24 @@
     android:layout_height="match_parent"
     tools:context="com.forcetower.uefs.view.connected.fragments.DisciplineClassesFragment">
 
+    <TextView
+        android:id="@+id/dev_thing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/you_cant_download_materials_yet"
+        android:textAlignment="center"
+        android:textColor="@color/primaryText"
+        android:padding="12dp"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_below="@id/inc_toolbar"
+        android:layout_below="@id/dev_thing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="8dp"
-        android:clipToPadding="false">
+        android:clipToPadding="false"
+        tools:listitem="@layout/card_discipline_classes"
+        tools:itemCount="3">
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
