--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,7 +30,7 @@
     <color name="secondaryText">#757575</color>
 
     <color name="divider">#BDBDBD</color>
-    <color name="background">#F5F5F5</color>
+    <color name="background">#f8f8f8</color>
     <color name="light_gray">#D9D9D9</color>
     <color name="lighter_gray">#EEEEEE</color>
     <color name="little_darker_gray">#C7C7C7</color>
