--- a/app/src/main/res/layout/fragment_universe_create_account.xml
+++ b/app/src/main/res/layout/fragment_universe_create_account.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/view_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <LinearLayout
         android:id="@+id/dev_ll_ivs"
