--- a/app/src/main/res/layout/fragment_universe_login.xml
+++ b/app/src/main/res/layout/fragment_universe_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -25,6 +26,7 @@
                 android:layout_margin="16dp">
 
                 <ImageView
+                    android:id="@+id/iv_logo"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     app:srcCompat="@drawable/ic_unes_colored"
