--- a/app/src/main/res/layout/activity_logged.xml
+++ b/app/src/main/res/layout/activity_logged.xml
@@ -16,11 +16,12 @@
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/nav_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_logged"
-        app:menu="@menu/activity_logged_drawer"/>
+        app:menu="@menu/activity_logged_drawer"
+        app:itemBackground="@drawable/nav_drawer_background"/>
 
 </android.support.v4.widget.DrawerLayout>
