--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,6 +34,7 @@
     <color name="light_gray">#D9D9D9</color>
     <color name="lighter_gray">#EEEEEE</color>
     <color name="little_darker_gray">#C7C7C7</color>
+    <color name="drawer_selected_color">#192196F3</color>
 
     <color name="android_green">#A4C639</color>
 
