--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -51,7 +51,7 @@
 
     <color name="facebook_blue">#3B5998</color>
     <color name="red">#F44336</color>
-
+    <color name="black">#000</color>
 
     <color name="dis_01">#2196F3</color>
     <color name="dis_02">#4CAF50</color>
