--- a/app/src/main/res/drawable/background_rounded.xml
+++ b/app/src/main/res/drawable/background_rounded.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/drawer_selected_color"/>
-    <stroke android:width="3dp" android:color="@color/drawer_selected_color" />
-    <corners android:radius="4dp"/>
-    <padding android:left="16dp" android:top="0dp" android:right="16dp" android:bottom="0dp" />
-</shape>
+<inset
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:insetRight="8dp"
+    android:insetLeft="8dp">
+    <shape>
+        <solid android:color="@color/drawer_selected_color"/>
+        <stroke android:width="3dp" android:color="@color/drawer_selected_color" />
+        <corners android:radius="4dp"/>
+        <padding android:left="8dp" android:top="0dp" android:right="8dp" android:bottom="0dp" />
+    </shape>
+</inset>
