--- a/app/src/main/res/layout/nav_header_logged.xml
+++ b/app/src/main/res/layout/nav_header_logged.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="24dp"
     android:paddingStart="16dp"
     android:paddingLeft="16dp"
     android:paddingEnd="16dp"
@@ -10,6 +11,13 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_unes_large_image_512"/>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/image_placeholder"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_centerVertical="true"
