Updated Gradle, Enabled DataBinding

--- a/app/src/main/res/layout/content_logged.xml
+++ b/app/src/main/res/layout/content_logged.xml
@@ -29,6 +29,7 @@
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:indeterminate="true"
         android:visibility="gone"
+        tools:visibility="visible"
         android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
