Get Ready for next update

--- a/app/src/main/res/menu/activity_logged_drawer.xml
+++ b/app/src/main/res/menu/activity_logged_drawer.xml
@@ -17,20 +17,9 @@
             android:title="@string/nav_title_unes_adventure"/>
 
         <item
-            android:id="@+id/nav_oracle_gate"
-            android:icon="@drawable/ic_eye_black_24dp"
-            android:title="@string/title_gates_oracle"/>
-
-        <item
             android:id="@+id/nav_chat"
             android:icon="@drawable/ic_chat_black_24dp"
             android:title="@string/chat"/>
-
-        <item
-            android:id="@+id/nav_universe"
-            android:title="@string/the_universe"
-            android:icon="@drawable/ic_atom_black_24dp"/>
-
     </group>
 
     <group
@@ -100,7 +89,21 @@
             android:id="@+id/nav_logout"
             android:title="@string/nav_title_logout"
             android:icon="@drawable/ic_logoff_accent_30dp"/>
+    </group>
 
+    <group
+        android:id="@+id/nav_group_testing"
+        android:checkableBehavior="single">
+
+        <item
+            android:id="@+id/nav_oracle_gate"
+            android:icon="@drawable/ic_eye_black_24dp"
+            android:title="@string/title_gates_oracle"/>
+
+        <item
+            android:id="@+id/nav_universe"
+            android:title="@string/the_universe"
+            android:icon="@drawable/ic_atom_black_24dp"/>
     </group>
 
     <group
